# 3.18.13 (41856) Jun 22, 2010
Improved usage of JNLP IO API, see #2397
# 3.18.12 (41854) Jun 22, 2010
# 3.18.11 (40774) May 15, 2010
Fixed: remove junctions that have been orphaned by removal of a branch, see #1826
# 3.18.10 (40765) May 14, 2010
> Fixed: sometimes dotted circle junctions are left behind, see #1826
# 3.18.09 (40735) May 13, 2010
Removed warning message from circuits with a capacitor and small resistance, see #2087 and #2323
# 3.18.08 (40572) May 11, 2010
> Prevent electrons from bunching up in pairs, see #1828
# 3.18.07 (40398) May 4, 2010
Changed default timestep parameters from (1E-6,1E-6) to (1E-5,1E-5)
Changed default resistivity from 1E-8 to 1E-4
# 3.18.06 (40396) May 4, 2010
Added developer controls for trading off accuracy and speed in the physics engine
Added timestep subdivision algorithm for improving the physics engine, see #2241
> Removed show equations feature, see #1913
# 3.18.04 (38771) Feb 18, 2010
2/18/10 Deploy to dev
> Added a warning error message for potentially problematic circuits.
# 3.18.02 (38103) Jan 14, 2010
1/14/10 Added virtual lab versions and updated names.
# 3.18.01 (38101) Jan 14, 2010
# 3.18.00 (37980) Jan 8, 2010
1/8/10 public version for milestone "full redeploy, 2010 Q1"
# 3.17.24 (37754) Dec 29, 2009
> Fixed a bug that made the circuit run very quickly while dragging voltage or resistance sliders, see #2040
# 3.17.23 (37750) Dec 29, 2009
Removed vertical struts to decrease height of control panel content, see #2039
Put lifelike and schematic on the same line to reduce control panel height, see #2039
> Improved layout in control panel to remove scroll bars in AC version.
# 3.17.22 (37339) Dec 11, 2009
12/11/09 test version for milestone "full redeploy, 2010 Q1"
# 3.17.21 (36812) Nov 19, 2009
Redeploy for testing, with phetcommon changes in clock control panel
# 3.17.20 (36660) Nov 15, 2009
Signify a circuit change and recompute physics when an element is added to the play area, resolves #1889
Small refactors