@@ -1,3 +1,4 @@
+Added a focus listener to the text field in the slider and made the listener commit the changed value.  See #2399.
 # 3.18.13 (41856) Jun 22, 2010
 Improved usage of JNLP IO API, see #2397
 # 3.18.12 (41854) Jun 22, 2010
